--- a/src/app/components/popup/_index.scss
+++ b/src/app/components/popup/_index.scss
@@ -9,6 +9,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 2;
   background: rgba(255,255,255,0.8);
   display: flex;
   align-items: center;
