--- a/src/app/components/scroll-wrapper/_index.scss
+++ b/src/app/components/scroll-wrapper/_index.scss
@@ -7,6 +7,7 @@
 .scroll-wrapper {
   position: relative;
   height: 100vh;
+  z-index: 1;
   @include core-layout();
 
   .scroll-wrapper-inner {
